--- a/index.html
+++ b/index.html
@@ -9,32 +9,96 @@
 </head>
 <body>
 
+    <!--HEADER-->
 
     <header>
-        <div class="container column flex">
-         <div class="flex head1"></div>
-         <div class="flex head2"></div>  
+        <div class="container">
+         <div class="flex head1">
+            LOGO
+            MENU 
+            BOTTONE
+         </div>
+
+         <div class="head2">
+            <h1>IL TUO POSTO PER PARLARE</h1>
+            <p>Che tu faccia parte di un ....</p>
+            <button>PREMI QUI</button>
+         </div>  
         </div>
     </header>
     
+    <!--MAIN-->
 
     <main>
 
-        <div class="container column flex">
-         <div class="flex section1"></div>
-         <div class="flex section2"></div>
-         <div class="flex section3"></div>
-         <div class="flex section4"></div>
-        </div>
+        <!--SECTION1-->
+
+         <div class="flex section1">
+
+            <div class="section1 IMG">
+                IMMAGINE1
+            </div>
+
+            <div class="section1 TEXT">
+              <h2>TESTO</h2>
+              <p>PARAGRAFO</p>
+            </div>
+
+         </div>
+
+        <!--SECTION2-->
+
+         <div class="flex section2">
+
+         <div class="flex section2 TEXT2">
+            <h2>TESTO</h2>
+            <p>PARAGRAFO</p>
+         </div>
+
+         <div class="flex section2 IMG2">
+            IMMAGINE2
+         </div>
+
+         </div>
+
+        <!--SECTION3-->
+
+         <div class="flex section3">
+
+            <div class="section3 IMG3">
+                IMMAGINE3
+            </div>
+
+            <div class="section3 TEXT3">
+              <h2>TESTO</h2>
+              <p>PARAGRAFO</p>
+            </div>
+
+         </div>
+
+         <!--SECTION4-->
+
+         <div class="flex section4">
+
+            <div class="flex section4 TEXT4">
+               <h2>TESTO</h2>
+               <p>PARAGRAFO</p>
+            </div>
+   
+            <div class="flex section4 IMG4">
+               IMMAGINE4
+            </div>
+   
+            </div>
+
 
     </main>
 
+        <!--FOOTER-->
 
-    <footer>
-        <div class="container column flex">
-         <div class="flex foot"></div>
-        </div>
-    </footer>
+           <footer>
+            <div class="flex foot"></div>
+           </footer>
 
     
 </body>
