--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <header>
         <div class="container">
          <div class="flex head1">
-            LOGO
-            MENU 
-            BOTTONE
+            <div class="logo">LOGO</div>
+            <div class="menu">MENU</div>
+            <div class="bottom">BOTTONE</div>
          </div>
 
          <div class="head2">
             <h1>IL TUO POSTO PER PARLARE</h1>
             <p>Che tu faccia parte di un ....</p>
             <button>PREMI QUI</button>
+            <button>APRI QUI</button>
          </div>  
         </div>
     </header>
@@ -33,13 +34,13 @@
 
         <!--SECTION1-->
 
-         <div class="flex section1">
+         <div class="container flex section-nobg">
 
-            <div class="section1 IMG">
+            <div class="IMG">
                 IMMAGINE1
             </div>
 
-            <div class="section1 TEXT">
+            <div class="TEXT">
               <h2>TESTO</h2>
               <p>PARAGRAFO</p>
             </div>
@@ -48,28 +49,29 @@
 
         <!--SECTION2-->
 
-         <div class="flex section2">
+         <div class="section-bg">
 
-         <div class="flex section2 TEXT2">
-            <h2>TESTO</h2>
-            <p>PARAGRAFO</p>
-         </div>
+          <div class="container flex"> 
+            <div class="TEXT">
+             <h2>TESTO</h2>
+             <p>PARAGRAFO</p>
+            </div>
 
-         <div class="flex section2 IMG2">
+         <div class="IMG">
             IMMAGINE2
          </div>
-
-         </div>
+        </div>
+     </div>
 
         <!--SECTION3-->
 
-         <div class="flex section3">
+        <div class="container flex section-nobg">
 
-            <div class="section3 IMG3">
-                IMMAGINE3
+            <div class="IMG">
+                IMMAGINE1
             </div>
 
-            <div class="section3 TEXT3">
+            <div class="TEXT">
               <h2>TESTO</h2>
               <p>PARAGRAFO</p>
             </div>
@@ -78,26 +80,28 @@
 
          <!--SECTION4-->
 
-         <div class="flex section4">
+         <div class="section-bg">
 
-            <div class="flex section4 TEXT4">
-               <h2>TESTO</h2>
-               <p>PARAGRAFO</p>
-            </div>
-   
-            <div class="flex section4 IMG4">
-               IMMAGINE4
-            </div>
-   
-            </div>
+            <div class="container"> 
+            TESTO
+            IMMAGINE
+          </div>
+       </div>
 
 
     </main>
 
         <!--FOOTER-->
 
-           <footer>
-            <div class="flex foot"></div>
+           <footer class="foot">
+            <div class="container">
+                <div class="foot-top">
+                 TESTO DIVISO IN COLONNE
+                </div>
+                <div class="foot-bottom">
+                    TESTO FINALE
+                </div>
+            </div>
            </footer>
 
     
